Criação página box e de cestas
- Adicionando novas imagens
- Arrumando menu de promoção
- Atualização no menu do departamento

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
     <ul class="menu">
       <li class="lista-menu"><a href="paginasPortugues/produtos.html">Produtos</a></li>
       <li class="lista-menu"><a href="paginasPortugues/ocasioes.html">Ocasiões</a></li>
-      <li class="lista-menu"><a href="#">Cestas</a></li>
-      <li class="lista-menu"><a href="#">Promoções</a></li>
-      <li class="lista-menu"><a href="#">Box</a></li>
+      <li class="lista-menu"><a href="paginasPortugues/cestas.html">Cestas</a></li>
+      <li class="lista-menu"><a href="#promocaoProdutos">Promoções</a></li>
+      <li class="lista-menu"><a href="paginasPortugues/box.html">Box</a></li>
     </ul>
   </nav>
   <!-- banner principal do site -->
@@ -183,7 +183,7 @@
 
     </section>
 
-    <section class="secao-promocao">
+    <section class="secao-promocao" id="promocaoProdutos">
       <div class="promocao-menu">
         <p>Produtos em Promoção</p>
         <ul>
