--- a/paginasPortugues/ocasioes.html
+++ b/paginasPortugues/ocasioes.html
@@ -145,9 +145,9 @@
         <ul class="menu">
         <li class="lista-menu"><a href="produtos.html" class="listaHover">Produtos</a></li>
         <li class="lista-menu"><a href="ocasioes.html" class="listaMenuDark listaMenuLight">Ocasiões</a></li>
-        <li class="lista-menu"><a href="#" class="listaHover">Cestas</a></li>
-        <li class="lista-menu"><a href="#" class="listaHover">Promoções</a></li>
-        <li class="lista-menu"><a href="#" class="listaHover">Box</a></li>
+        <li class="lista-menu"><a href="cestas.html" class="listaHover">Cestas</a></li>
+        <li class="lista-menu"><a href="../index.html#promocaoProdutos" class="listaHover">Promoções</a></li>
+        <li class="lista-menu"><a href="box.html" class="listaHover">Box</a></li>
         </ul>
     </nav>
 
@@ -158,21 +158,21 @@
                 <p>Departamento</p>
             </div>
             <ul>
-                <li class="listaMenu-departamento"><a href="#">Arranjo</a></li>
-                <li class="listaMenu-departamento"><a href="#">Buquês</a></li>
-                <li class="listaMenu-departamento"><a href="#">Buquê Noivas</a></li>
-                <li class="listaMenu-departamento"><a href="#">Cestas</a></li>
-                <li class="listaMenu-departamento"><a href="#">Complementos</a></li>
-                <li class="listaMenu-departamento"><a href="#">Coroa Fúnibres</a></li>
-                <li class="listaMenu-departamento"><a href="#">Decoração</a></li>
-                <li class="listaMenu-departamento"><a href="#">Ramalhetes</a></li>
-                <li class="listaMenu-departamento"><a href="#">Box</a></li>
+                <li class="listaMenu-departamento"><a href="produtos.html#Arranjo">Arranjo</a></li>
+                <li class="listaMenu-departamento"><a href="produtos.html#buque">Buquês</a></li>
+                <li class="listaMenu-departamento"><a href="produtos.html#buqueNoiva">Buquê Noivas</a></li>
+                <li class="listaMenu-departamento"><a href="cestas.html#cestas">Cestas</a></li>
+                <li class="listaMenu-departamento"><a href="cestas.html#complementos">Complementos</a></li>
+                <li class="listaMenu-departamento"><a href="cestas.html#coroaFunibre">Coroa Fúnibres</a></li>
+                <li class="listaMenu-departamento"><a href="box.html#decoracao">Decoração</a></li>
+                <li class="listaMenu-departamento"><a href="box.html#ramalhete">Ramalhetes</a></li>
+                <li class="listaMenu-departamento"><a href="box.html#box">Box</a></li>
             </ul>
         </section>
 
         <section class="diaNamorados">
             <div class="titulo">
-                <p> Dias dos namorados</p>
+                <p id="diaNamorado"> Dias dos namorados</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
@@ -211,7 +211,7 @@
 
         <section class="secao-casamento">
             <div class="titulo">
-                <p>Casamento</p>
+                <p id="casamento">Casamento</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
@@ -258,7 +258,7 @@
 
         <section class="secao-aniversario">
             <div class="titulo">
-                <p>Aniversário</p>
+                <p id="aniversario">Aniversário</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
