--- a/paginasPortugues/box.html
+++ b/paginasPortugues/box.html
@@ -142,14 +142,14 @@
     <!-- Menu de navegação global do site -->
     <nav class="navegacao">
         <ul class="menu">
-        <li class="lista-menu"><a href="produtos.html" class="listaMenuDark listaMenuLight">Produtos</a></li>
+        <li class="lista-menu"><a href="produtos.html" class="listaHover">Produtos</a></li>
         <li class="lista-menu"><a href="ocasioes.html" class="listaHover">Ocasiões</a></li>
         <li class="lista-menu"><a href="cestas.html" class="listaHover">Cestas</a></li>
         <li class="lista-menu"><a href="../index.html#promocaoProdutos" class="listaHover">Promoções</a></li>
-        <li class="lista-menu"><a href="box.html" class="listaHover">Box</a></li>
+        <li class="lista-menu"><a href="box.html" class="listaMenuDark listaMenuLight">Box</a></li>
         </ul>
     </nav>
-
+    <!-- Página principal do website -->
     <main>
         <section class="menuDepartamento">
             <div>
@@ -159,148 +159,149 @@
                 <li class="listaMenu-departamento"><a href="#Arranjo">Arranjo</a></li>
                 <li class="listaMenu-departamento"><a href="#buque">Buquês</a></li>
                 <li class="listaMenu-departamento"><a href="#buqueNoiva">Buquê Noivas</a></li>
-                <li class="listaMenu-departamento"><a href="cestas.html#cestas">Cestas</a></li>
-                <li class="listaMenu-departamento"><a href="cestas.html#complementos">Complementos</a></li>
-                <li class="listaMenu-departamento"><a href="cestas.html#coroaFunibre">Coroa Fúnibres</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#decoracao">Decoração</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#ramalhete">Ramalhetes</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#box">Box</a></li>
+                <li class="listaMenu-departamento"><a href="#cestas">Cestas</a></li>
+                <li class="listaMenu-departamento"><a href="#complementos">Complementos</a></li>
+                <li class="listaMenu-departamento"><a href="#coroaFunibre">Coroa Fúnibres</a></li>
+                <li class="listaMenu-departamento"><a href="#decoracao">Decoração</a></li>
+                <li class="listaMenu-departamento"><a href="#ramalhete">Ramalhetes</a></li>
+                <li class="listaMenu-departamento"><a href="#box">Box</a></li>
             </ul>
         </section>
 
-        <section class="secao-arranjo">
+        <section class="secao-decoracao">
             <div class="titulo">
-                <p id="Arranjo">Arranjos</p>
+                <p id="decoracao">Decoração</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Arranjo1.png">
+                        <img src="../img/imgDecoracao1.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo2.png">
+                        <img src="../img/imgDecoracao2.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo3.png">
+                        <img src="../img/imgDecoracao3.png">
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Arranjo4.png">
+                        <img src="../img/imgDecoracao4.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo5.png">
+                        <img src="../img/imgDecoracao5.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Arranjo6.png">
+                        <img src="../img/imgDecoracao6.png">
                     </div>
                 </div>
 
             </div>
         </section>
 
-        <section class="secao-buque">
+        <section class="secao-ramalhetes">
             <div class="titulo">
-                <p id="buque">Buquês</p>
+                <p id="ramalhete">Ramalhetes</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Buque1.png">
+                        <img src="../img/imgComp1.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque2.png">
+                        <img src="../img/imgComp2.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque3.png">
+                        <img src="../img/imgComp3.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque3.png">
+                        <img src="../img/imgComp4.png">
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/Buque4.png">
+                        <img src="../img/imgComp5.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque5.png">
+                        <img src="../img/imgComp6.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque6.png">
+                        <img src="../img/imgComp4.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/Buque2.png">
+                        <img src="../img/imgComp1.png">
                     </div>
                 </div>
 
             </div>
         </section>
 
-        <section class="secao-buqueNoiva">
+        <section class="secao-box">
             <div class="titulo">
-                <p id="buqueNoiva">Buquês de Noivas</p>
+                <p id="box">Box</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
             <div class="imagensGrid">
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva1.png">
+                        <img src="../img/imgCoroa1.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva7.png">
+                        <img src="../img/imgCoroa2.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva3.png">
+                        <img src="../img/imgCoroa3.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva4.png">
+                        <img src="../img/imgCoroa4.png">
                     </div>
 
                 </div>
 
                 <div class="gridLinha">
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva5.png">
+                        <img src="../img/imgCoroa5.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva6.png">
+                        <img src="../img/imgCoroa6.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva7.png">
+                        <img src="../img/imgCoroa7.png">
                     </div>
 
                     <div class="gridColuna">
-                        <img src="../img/BuqueNoiva4.png">
+                        <img src="../img/imgCoroa8.png">
                     </div>
                 </div>
 
             </div>
         </section>
     </main>
+
     <!-- Rodapé do website -->
     <footer class="rodape">
         <div class="iconeTelefone">
