Criação da acessibilidade do FontSize
Acessibilidade para página de produtos e página principal

--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -103,8 +103,8 @@
             <img src="../img/bandeira-estados-unidos 1.png">
             </div>
             <div class="botaoTextos">
-            <button>A+</button>
-            <button>A-</button>
+            <button id="increase-font">A+</button>
+            <button id="decrease-font">A-</button>
             </div>
             <div>
             <input type="checkbox" class="checkbox" id="chk" />
@@ -322,5 +322,6 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="../js/modoDarkProdutos.js"></script>
     <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script>
+    <script src="../js/fontSizeProdutos.js"></script>
 </body>
 </html>
