--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
           <img src="img/bandeira-estados-unidos 1.png">
         </div>
         <div class="botaoTextos">
-          <button>A+</button>
-          <button>A-</button>
+          <button id="increase-font">A+</button>
+          <button id="decrease-font">A-</button>
         </div>
         <div>
           <input type="checkbox" class="checkbox" id="chk" />
@@ -310,6 +310,7 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
   </script>
   <script src="js/modoDarkPrincipal.js"></script>
+  <script src="js/fontSize.js"></script>
   <!-- <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script> -->
 </body>
 
