Finalização Acessibilidade Inglês pag Produtos

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
       <div class="destaques">
         <img src="img/Shop1Destaques.png">
         <div>
-          <p id="descricaoProdutoDestaque">Bouquet de flores tropicais com acabamento em papel de seda e laço de cetim. Nossa criação mais diferente e exótica para presentear de forma única! Uma seleção de flores tropicais e exóticas em uma composição exclusiva com assinatura Giardini. Aproximadamente 40 hastes de flores e folhagens.</p>
-          <p id="textoDisponivel">Disponibilidade: Em estoque</p>
+          <p id="descricaoProdutoDestaque" data-translate="descricaoProdutoDestaque">Bouquet de flores tropicais com acabamento em papel de seda e laço de cetim. Nossa criação mais diferente e exótica para presentear de forma única! Uma seleção de flores tropicais e exóticas em uma composição exclusiva com assinatura Giardini. Aproximadamente 40 hastes de flores e folhagens.</p>
+          <p id="textoDisponivel" data-translate="textoDisponivel">Disponibilidade: Em estoque</p>
 
           <div class="botoesDestaque">
               <button class="destaqueBotao-comprar">Comprar agora</button>
@@ -185,11 +185,11 @@
 
     <section class="secao-promocao" id="promocaoProdutos">
       <div class="promocao-menu">
-        <p>Produtos em Promoção</p>
+        <p data-translate="textoProdutoPromocao">Produtos em Promoção</p>
         <ul>
-          <li class="lista-promocao-menu"><a href="#">Buquês</a></li>
-          <li class="lista-promocao-menu"><a href="#">Arranjos</a></li>
-          <li class="lista-promocao-menu"><a href="#">Cestas</a></li>
+          <li class="lista-promocao-menu"><a href="#" data-translate="menu-promocao-buque">Buquês</a></li>
+          <li class="lista-promocao-menu"><a href="#" data-translate="menu-promocao-arranjos">Arranjos</a></li>
+          <li class="lista-promocao-menu"><a href="#" data-translate="menu-promocao-cestas">Cestas</a></li>
         </ul>
       </div>
       <!-- Carousel dos produtos promocao -->
@@ -198,9 +198,9 @@
         <div class="card">
           <img src="img/imgCestaCafé.png">
           <div class="infoProduto">
-            <h5 class="card-title">Cesta de Café da manhã para o seu Amor</h5>
-            <h4 class="card-preco">De: <del>R$307,90</del> <br> Por: <strong>R$ 263,90</strong></h4>
-            <p class="card-descricao">A Cesta de Café da Manhã Coração, além de surpreender, forma uma refeição completa para quem você ama. Isso porque ela traz bolo, achocolatado, suco, café solúvel, cappuccino, pães, biscoitos, frios, frutas, cream cheese e chocolates.</p>
+            <h5 class="card-title" data-translate="titulo-card1">Cesta de Café da manhã para o seu Amor</h5>
+            <h4 class="card-preco"><del>R$307,90</del> <br> <strong>R$ 263,90</strong></h4>
+            <p class="card-descricao" data-translate="descricao-card1">A Cesta de Café da Manhã Coração, além de surpreender, forma uma refeição completa para quem você ama. Isso porque ela traz bolo, achocolatado, suco, café solúvel, cappuccino, pães, biscoitos, frios, frutas, cream cheese e chocolates.</p>
             <div class="card-botoes">
               <button class="card-botaoCarrinho">
                 <img src="img/IconeCarrinho.png">
@@ -213,9 +213,9 @@
         <div class="card">
           <img src="img/imgBuquêChampagne.png">
           <div class="infoProduto">
-            <h5 class="card-title">Buquê de 8 Rosas Champagne e Chocolate</h5>
-            <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: <strong>R$ 139,90</strong></h4>
-            <p class="card-descricao">Simpatia, admiração e fidelidade, esses são os significados que as rosas na cor champanhe trazem. Esse buquê, que vem acompanhado por uma caixa de bombons, é perfeito para oferecer à pessoa amada nos momentos mais especiais.</p>
+            <h5 class="card-title" data-translate="titulo-card2">Buquê de 8 Rosas Champagne e Chocolate</h5>
+            <h4 class="card-preco"><del>R$140,98</del> <br> <strong>R$ 139,90</strong></h4>
+            <p class="card-descricao" data-translate="descricao-card2">Simpatia, admiração e fidelidade, esses são os significados que as rosas na cor champanhe trazem. Esse buquê, que vem acompanhado por uma caixa de bombons, é perfeito para oferecer à pessoa amada nos momentos mais especiais.</p>
             <div class="card-botoes">
               <button class="card-botaoCarrinho">
                 <img src="img/IconeCarrinho.png">
@@ -228,9 +228,9 @@
         <div class="card">
           <img src="img/imgBuqueEChocolate.png">
           <div class="infoProduto">
-            <h5 class="card-title">Buquê de 6 Rosas Vermelhas e Chocolate</h5>
-            <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: <strong>R$ 149,90</strong></h4>
-            <p class="card-descricao">Chocolates e Flores são presentes que nunca saem de moda. Este lindo buquê de talo médio é confeccionado com 6 rosas vermelhas envolvidas em Ruscus, Tango e acabamento em ráfia; Acompanha também deliciosos bombons Ferrero Rocher ou similares.</p>
+            <h5 class="card-title" data-translate="titulo-card3">Buquê de 6 Rosas Vermelhas e Chocolate</h5>
+            <h4 class="card-preco"><del>R$140,98</del> <br> <strong>R$ 149,90</strong></h4>
+            <p class="card-descricao" data-translate="descricao-card3">Chocolates e Flores são presentes que nunca saem de moda. Este lindo buquê de talo médio é confeccionado com 6 rosas vermelhas envolvidas em Ruscus, Tango e acabamento em ráfia; Acompanha também deliciosos bombons Ferrero Rocher ou similares.</p>
             <div class="card-botoes">
               <button class="card-botaoCarrinho">
                 <img src="img/IconeCarrinho.png">
@@ -243,9 +243,9 @@
         <div class="card">
           <img src="img/CestaRosasMargaridasBrancas.png">
           <div class="infoProduto">
-            <h5 class="card-title">Cesta com Rosas e Margaridas Amarelas e Brancas</h5>
-            <h4 class="card-preco">De: <del>R$140,98</del> <br> Por: <strong>R$ 139,90</strong></h4>
-            <p class="card-descricao">Presentear alguém importante com um cesta de rosas e margaridas amarelas e brancas, como essa, faz com que você se mostre presente em todos os momentos e datas importantes, mesmo morando distante.</p>
+            <h5 class="card-title" data-translate="titulo-card4">Cesta com Rosas e Margaridas Amarelas e Brancas</h5>
+            <h4 class="card-preco"><del>R$140,98</del> <br> <strong>R$ 139,90</strong></h4>
+            <p class="card-descricao" data-translate="descricao-card4">Presentear alguém importante com um cesta de rosas e margaridas amarelas e brancas, como essa, faz com que você se mostre presente em todos os momentos e datas importantes, mesmo morando distante.</p>
             <div class="card-botoes">
               <button class="card-botaoCarrinho">
                 <img src="img/IconeCarrinho.png">
@@ -258,9 +258,9 @@
         <div class="card">
           <img src="img/CestaCafeChocolateFlores.png">
           <div class="infoProdutos">
-            <h5 class="card-title">Cesta de Café com Chocolate e Flores Luxo</h5>
-            <h4 class="card-preco">De: <del>R$296,98</del> <br> Por: <strong> R$ 263,90</strong></h4>
-            <p class="card-descricao">Uma deliciosa cesta de café da manhã incluindo diversas guloseimas. São variedades de chocolate, bombons Sonhos de Valsa, chocolates em barra e um arranjo delicado de flores.</p>
+            <h5 class="card-title" data-translate="titulo-card5">Cesta de Café com Chocolate e Flores Luxo</h5>
+            <h4 class="card-preco"><del>R$296,98</del> <br> <strong> R$ 263,90</strong></h4>
+            <p class="card-descricao" data-translate="descricao-card5">Uma deliciosa cesta de café da manhã incluindo diversas guloseimas. São variedades de chocolate, bombons Sonhos de Valsa, chocolates em barra e um arranjo delicado de flores.</p>
             <div class="card-botoes">
               <button class="card-botaoCarrinho">
                 <img src="img/IconeCarrinho.png">
@@ -276,7 +276,7 @@
     
 
     <section class="secao-todosProdutos">
-      <p>Todos os produtos</p>
+      <p data-translate="textoTodosPrdutos">Todos os produtos</p>
       <div id="linhaTexto"></div>
       <div class="produtosImagens">
         <img src="img/secaoProdutos - img1.png">
