--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -96,34 +96,34 @@
     <!-- Cabeçalho do site -->
     <header>
         <div class="caixa-info">
-        <p class="textoAtendimento">Atendimento de segunda a sexta</p>
-        <section class="informacoes">
-            <div class="imagensBandeiras">
-            <img src="../img/2-bandeira-do-brasil 1.png">
-            <img src="../img/bandeira-estados-unidos 1.png">
-            </div>
-            <div class="botaoTextos">
-            <button id="increase-font">A+</button>
-            <button id="decrease-font">A-</button>
-            </div>
-            <div>
-            <input type="checkbox" class="checkbox" id="chk" />
-            <label class="label" for="chk">
-                <div class="ball">
-                <i class="fa-solid fa-sun fa-xs" id="modoDark"></i>
+            <p class="textoAtendimento" data-translate="textoAtendimento">Atendimento de segunda a sexta</p>
+            <section class="informacoes">
+                <div class="imagensBandeiras">
+                    <a id="portugueseButton"> <img src="../img/2-bandeira-do-brasil 1.png"></a>
+                    <a id="englishButton"><img src="../img/bandeira-estados-unidos 1.png"></a>
                 </div>
-            </label>
-            </div>
-            <div class="iconeCarrinhoHeader">
-            <img src="../img/icon/carrinho.svg">
-            </div>
-        </section>
+                <div class="botaoTextos">
+                    <button id="increase-font">A+</button>
+                    <button id="decrease-font">A-</button>
+                </div>
+                <div>
+                <input type="checkbox" class="checkbox" id="chk" />
+                <label class="label" for="chk">
+                    <div class="ball">
+                        <i class="fa-solid fa-sun fa-xs" id="modoDark"></i>
+                    </div>
+                </label>
+                </div>
+                <div class="iconeCarrinhoHeader">
+                    <img src="../img/icon/carrinho.svg">
+                </div>
+            </section>
         </div>
 
         <div class="cabecalho">    
         <section class="logo">
             <a href="../index.html"><img src="../img/LogoFloricultura.png"></a>
-            <a href="../index.html" style="text-decoration: none;"><h1>Floricultura Equador</h1></a>
+            <a href="../index.html" style="text-decoration: none;"><h1 data-translate="h1_floricultura">Floricultura Equador</h1></a>
         </section>
     
         <section class="inputPesquisar">
@@ -142,35 +142,35 @@
     <!-- Menu de navegação global do site -->
     <nav class="navegacao">
         <ul class="menu">
-        <li class="lista-menu"><a href="produtos.html" class="listaMenuDark listaMenuLight">Produtos</a></li>
-        <li class="lista-menu"><a href="ocasioes.html" class="listaHover">Ocasiões</a></li>
-        <li class="lista-menu"><a href="cestas.html" class="listaHover">Cestas</a></li>
-        <li class="lista-menu"><a href="../index.html#promocaoProdutos" class="listaHover">Promoções</a></li>
-        <li class="lista-menu"><a href="box.html" class="listaHover">Box</a></li>
+        <li class="lista-menu"><a href="produtos.html" class="listaMenuDark listaMenuLight" data-translate="menu_produtos">Produtos</a></li>
+        <li class="lista-menu"><a href="ocasioes.html" class="listaHover" data-translate="menu_ocasioes">Ocasiões</a></li>
+        <li class="lista-menu"><a href="cestas.html" class="listaHover" data-translate="menu_cestas">Cestas</a></li>
+        <li class="lista-menu"><a href="../index.html#promocaoProdutos" class="listaHover" data-translate="menu_promocoes">Promoções</a></li>
+        <li class="lista-menu"><a href="box.html" class="listaHover" data-translate="menu_box">Box</a></li>
         </ul>
     </nav>
 
     <main>
         <section class="menuDepartamento">
             <div>
-                <p>Departamento</p>
+                <p data-translate="texto-departamento">Departamento</p>
             </div>
             <ul>
-                <li class="listaMenu-departamento"><a href="#Arranjo">Arranjo</a></li>
-                <li class="listaMenu-departamento"><a href="#buque">Buquês</a></li>
-                <li class="listaMenu-departamento"><a href="#buqueNoiva">Buquê Noivas</a></li>
-                <li class="listaMenu-departamento"><a href="cestas.html#cestas">Cestas</a></li>
-                <li class="listaMenu-departamento"><a href="cestas.html#complementos">Complementos</a></li>
-                <li class="listaMenu-departamento"><a href="cestas.html#coroaFunibre">Coroa Fúnibres</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#decoracao">Decoração</a></li>
-                <li class="listaMenu-departamento"><a href="box.html#ramalhete">Ramalhetes</a></li>
+                <li class="listaMenu-departamento"><a href="#Arranjo" data-translate="menu_arranjo">Arranjo</a></li>
+                <li class="listaMenu-departamento"><a href="#buque" data-translate="menu_buque">Buquês</a></li>
+                <li class="listaMenu-departamento"><a href="#buqueNoiva" data-translate="menu_buqueNoiva">Buquê Noivas</a></li>
+                <li class="listaMenu-departamento"><a href="cestas.html#cestas" data-translate="menu_cestas">Cestas</a></li>
+                <li class="listaMenu-departamento"><a href="cestas.html#complementos" data-translate="menu_complementos">Complementos</a></li>
+                <li class="listaMenu-departamento"><a href="cestas.html#coroaFunibre" data-translate="menu_coroaFunibre">Coroa Fúnibres</a></li>
+                <li class="listaMenu-departamento"><a href="box.html#decoracao" data-translate="menu_decoracao">Decoração</a></li>
+                <li class="listaMenu-departamento"><a href="box.html#ramalhete" data-translate="menu_ramalhetes">Ramalhetes</a></li>
                 <li class="listaMenu-departamento"><a href="box.html#box">Box</a></li>
             </ul>
         </section>
 
         <section class="secao-arranjo">
             <div class="titulo">
-                <p id="Arranjo">Arranjos</p>
+                <p id="Arranjo" data-translate="menu_arranjo">Arranjos</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
@@ -209,7 +209,7 @@
 
         <section class="secao-buque">
             <div class="titulo">
-                <p id="buque">Buquês</p>
+                <p id="buque" data-translate="menu_buque">Buquês</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
@@ -256,7 +256,7 @@
 
         <section class="secao-buqueNoiva">
             <div class="titulo">
-                <p id="buqueNoiva">Buquês de Noivas</p>
+                <p id="buqueNoiva" data-translate="menu_buqueNoiva">Buquês de Noivas</p>
                 <div class="linhaTexto-ocasioes"></div>
             </div>
 
@@ -323,5 +323,7 @@
     <script src="../js/modoDarkProdutos.js"></script>
     <script src="https://kit.fontawesome.com/8df296b2be.js" crossorigin="anonymous"></script>
     <script src="../js/fontSizeProdutos.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="../js/tradutorProdutos.js"></script>
 </body>
 </html>
