Atualização de algumas animações

--- a/paginasPortugues/produtos.html
+++ b/paginasPortugues/produtos.html
@@ -115,7 +115,7 @@
                 </label>
                 </div>
                 <div class="iconeCarrinhoHeader">
-                    <img src="../img/icon/carrinho.svg">
+                    <a  href="carrinho.html"><img src="../img/icon/carrinho.svg"></a>
                 </div>
             </section>
         </div>
