--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </label>
         </div>
         <div class="iconeCarrinhoHeader">
-          <img src="img/icon/carrinho.svg">
+          <a  href="paginasPortugues/carrinho.html"><img src="img/icon/carrinho.svg"></a>
         </div>
       </section>
     </div>
@@ -173,7 +173,7 @@
           <div class="botoesDestaque">
               <button class="destaqueBotao-comprar">Comprar agora</button>
               <button class="destaqueBotao-carrinho">
-                <img src="img/IconeCarrinho.png">
+                <a  href="paginasPortugues/carrinho.html"><img src="img/IconeCarrinho.png"></a>
               </button>
           </div>
         </div>
@@ -202,8 +202,8 @@
             <h4 class="card-preco"><del>R$307,90</del> <br> <strong>R$ 263,90</strong></h4>
             <p class="card-descricao" data-translate="descricao-card1">A Cesta de Café da Manhã Coração, além de surpreender, forma uma refeição completa para quem você ama. Isso porque ela traz bolo, achocolatado, suco, café solúvel, cappuccino, pães, biscoitos, frios, frutas, cream cheese e chocolates.</p>
             <div class="card-botoes">
-              <button class="card-botaoCarrinho">
-                <img src="img/IconeCarrinho.png">
+              <button class="card-botaoCarrinho"> <a  href="paginasPortugues/carrinho.html">
+                <img src="img/IconeCarrinho.png"></a>
               </button>
               <button class="card-botaoComprar">Comprar</button>
             </div>
@@ -217,8 +217,8 @@
             <h4 class="card-preco"><del>R$140,98</del> <br> <strong>R$ 139,90</strong></h4>
             <p class="card-descricao" data-translate="descricao-card2">Simpatia, admiração e fidelidade, esses são os significados que as rosas na cor champanhe trazem. Esse buquê, que vem acompanhado por uma caixa de bombons, é perfeito para oferecer à pessoa amada nos momentos mais especiais.</p>
             <div class="card-botoes">
-              <button class="card-botaoCarrinho">
-                <img src="img/IconeCarrinho.png">
+              <button class="card-botaoCarrinho"><a  href="paginasPortugues/carrinho.html">
+                <img src="img/IconeCarrinho.png"></a>
               </button>
               <button class="card-botaoComprar">Comprar</button>
             </div>
@@ -232,8 +232,8 @@
             <h4 class="card-preco"><del>R$140,98</del> <br> <strong>R$ 149,90</strong></h4>
             <p class="card-descricao" data-translate="descricao-card3">Chocolates e Flores são presentes que nunca saem de moda. Este lindo buquê de talo médio é confeccionado com 6 rosas vermelhas envolvidas em Ruscus, Tango e acabamento em ráfia; Acompanha também deliciosos bombons Ferrero Rocher ou similares.</p>
             <div class="card-botoes">
-              <button class="card-botaoCarrinho">
-                <img src="img/IconeCarrinho.png">
+              <button class="card-botaoCarrinho"><a  href="paginasPortugues/carrinho.html">
+                <img src="img/IconeCarrinho.png"></a>
               </button>
               <button class="card-botaoComprar">Comprar</button>
             </div>
@@ -247,8 +247,8 @@
             <h4 class="card-preco"><del>R$140,98</del> <br> <strong>R$ 139,90</strong></h4>
             <p class="card-descricao" data-translate="descricao-card4">Presentear alguém importante com um cesta de rosas e margaridas amarelas e brancas, como essa, faz com que você se mostre presente em todos os momentos e datas importantes, mesmo morando distante.</p>
             <div class="card-botoes">
-              <button class="card-botaoCarrinho">
-                <img src="img/IconeCarrinho.png">
+              <button class="card-botaoCarrinho"><a  href="paginasPortugues/carrinho.html">
+                <img src="img/IconeCarrinho.png"> </a>
               </button>
               <button class="card-botaoComprar">Comprar</button>
             </div>
@@ -263,7 +263,8 @@
             <p class="card-descricao" data-translate="descricao-card5">Uma deliciosa cesta de café da manhã incluindo diversas guloseimas. São variedades de chocolate, bombons Sonhos de Valsa, chocolates em barra e um arranjo delicado de flores.</p>
             <div class="card-botoes">
               <button class="card-botaoCarrinho">
-                <img src="img/IconeCarrinho.png">
+                <a  href="paginasPortugues/carrinho.html">
+                <img src="img/IconeCarrinho.png"> </a>
               </button>
               <button class="card-botaoComprar">Comprar</button>
             </div>
@@ -279,10 +280,10 @@
       <p data-translate="textoTodosPrdutos">Todos os produtos</p>
       <div id="linhaTexto"></div>
       <div class="produtosImagens">
-        <img src="img/secaoProdutos - img1.png">
-        <img src="img/secaoProdutos - img2.png">
-        <img src="img/secaoProdutos - img3.png">
-        <img src="img/secaoProdutos - img4.png">
+        <a href="paginasPortugues/detalhesProdutos.html"  class="imagemSecaoProdutos"><img src="img/secaoProdutos - img1.png"></a>
+        <a href="paginasPortugues/detalhesProdutos.html"  class="imagemSecaoProdutos"><img src="img/secaoProdutos - img2.png"></a>
+        <a href="paginasPortugues/detalhesProdutos.html"  class="imagemSecaoProdutos"> <img src="img/secaoProdutos - img3.png"></a>
+        <a href="paginasPortugues/detalhesProdutos.html" class="imagemSecaoProdutos"><img src="img/secaoProdutos - img4.png"></a>
       </div>
       
     </section>
